src/Surfnet/StepupMiddleware/ManagementBundle/Tests/Validator/Fixtures/invalid_configuration/no_gateway.php
<?php

return [
    'expectedError' => "Required property 'gateway' is missing",
    'expectedPropertyPath' => '(root)',
    'configuration' => []
];
